<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".MainActivity"
        >

    <EditText
            android:id="@+id/inputA"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:ems="10"
            android:hint="@string/inputAHint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/inputALabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inputALabel"
            />
    <TextView
            android:id="@+id/inputALabel"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/inputAString"
            />
    <TextView
            android:id="@+id/inputBLabel"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputALabel"
            tools:text="@string/inputBString"
            />
    <EditText
            android:id="@+id/inputB"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:ems="10"
            android:hint="@string/inputBHint"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/inputBLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inputBLabel"
            />
    <TextView
            android:id="@+id/resultOutput"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:text="@string/empty_result_value"
            android:textSize="@dimen/result_output_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputB"
            />
    <Button
            android:id="@+id/calculateButton"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:text="@string/calculate_button_label"
            android:onClick="calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultOutput"
            />

</androidx.constraintlayout.widget.ConstraintLayout>